--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,1 +1,8 @@
 <h1>Your personal blog</h1>
+
+<h1> <%= @user.name %> </h1>
+<h1> <%= @user.posts.each do |post| %> </h1>
+  <ul>
+    <li><%= post %> </li>
+  </ul>
+<%end %>
