--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,10 +1,8 @@
 <h1> Welcome To "Bloggers"</h1>
 <% @users.each do |user| %>
+      <h1><a href="/blogs/<%= user.id %>"><%= user.name %> </h1>
   <ul>
-      <h1> <li><a href="/blogs/<%= user.id %>"><%= user.name%> </li> </h1>
-
-        <h2> <%= user.title %> </h2>
-
-      <li> <img src= "<%= user.photo %>" ></li>
+    <h2> <%= user.title %> </h2> 
+    <img class="img" src= "<%= user.photo %>" >
   </ul>
 <% end %>  
