--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,8 +1,13 @@
 <h1>Your personal blog</h1>
 
 <h1> <%= @user.name %> </h1>
-<h1> <%= @user.posts.each do |post| %> </h1>
+<img class="img" src= "<%= @user.photo %>" >
+<h1> <% @user.posts.each do |post| %> </h1>
   <ul>
-    <li><%= post %> </li>
+     <h2> POST : <%= post.title %> </h2>
+     <li><h3>Description : <%= post.body %> </h3></li>
+      <% @post.comments.each do |comment| %>
+        <li> <%= comment.body %> </li>
+      <% end %> 
   </ul>
 <%end %>
